--- a/apoya.html
+++ b/apoya.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Coderise :: Support</title>
+		<title>Coderise :: Apoya</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -18,36 +18,36 @@
 			<header role="banner" class="container">
 				<div class="row">
 					<div class="twelvecol">
-						<a class="logo" href="index.html">//coderise</a>
+						<a class="logo" href="index-es.html">//coderise</a>
 						<a class="icon-list">menu</a>
 						<nav role="navigation">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index-es.html">Inicio</a></li>
 								<li class="dropdown">
 									<a>
-										About
+										Acerca
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
 									<ul>
-										<li><a href="about.html">About us</a></li>
-										<li><a href="how.html">How it works</a></li>
-										<li><a href="mentors.html">Mentors</a></li>
-										<li><a href="team.html">Our Team</a></li>
-										<li><a href="students.html">Our Students</a></li>
+										<li><a href="acerca.html">Sobre Coderise</a></li>
+										<li><a href="como.html">Como funciona</a></li>
+										<li><a href="mentores.html">Mentores</a></li>
+										<li><a href="equipo.html">Equipo</a></li>
+										<li><a href="estudiantes.html">Estudiantes</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
 									<a href="#">
-										Press
+										Prensa
 										<span class="icon-dropdown-arrow">&#9660;</span>
 									</a>
 									<ul>
-										<li><a href="press.html">Coverage</a></li>
-										<li><a href="releases.html">Press Releases</a></li>
+										<li><a href="prensa.html">Cubrimiento</a></li>
+										<li><a href="comunicados.html">Comunicados</a></li>
 									</ul>
 								</li>
-								<li class="active"><a href="contribute.html">Support</a></li>
-								<li class="last"><a href="apply.html">Apply</a></li>
+								<li class="active"><a href="apoya.html">Apoya</a></li>
+								<li class="last"><a href="aplica.html">Aplica</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -57,7 +57,7 @@
 				<section class="wrap-mini wrap-gray container">
 					<div class="row">
 						<div class="twelvecol">
-							<h2 class="title">Support Coderise</h2>
+							<h2 class="title">Apoya Coderise</h2>
 						</div>
 					<div>
 				</section>
@@ -128,7 +128,7 @@
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
 					<span class="globe left"></span>
-					<a class="left localization" href="apoya.html">Versión en español</a>
+					<a class="left localization" href="contribute.html">English version</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
