--- a/mentors.html
+++ b/mentors.html
@@ -3,136 +3,133 @@
 	<head>
 		<title>Coderise :: Mentors</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 		
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<div>
-					<a href="http://coderise.org"><h1>//coderise</h1></a>
-				</div>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>	
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</header>
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini disabled">English</button>
-  						<button class="btn btn-mini"><a href="mentores.html">Español</a></button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li class="dropdown active">
+									<a>
+										About
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="about.html">About us</a></li>
+										<li><a href="how.html">How it works</a></li>
+										<li class="active"><a href="mentors.html">Mentors</a></li>
+										<li><a href="team.html">Our Team</a></li>
+										<li><a href="students.html">Our Students</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Press
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="press.html">Coverage</a></li>
+										<li><a href="releases.html">Press Releases</a></li>
+									</ul>
+								</li>
+								<li><a href="contribute.html">Support</a></li>
+								<li class="last"><a href="apply.html">Apply</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="about.html">About</a>
-							<ul>
-								<li><a href="how.html">How It Works</a></li>
-								<li><a href="mentors.html">Mentors</a></li>
-								<li><a href="team.html">Our Team</a></li>
-								<li><a href="students.html">Our Students</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Support</a></li>
-						<li><a href="apply.html">Apply</a></li>
-						<li><a href="#">Press</a>
-							<ul>
-								<li><a href="press.html">Coverage</a></li>
-								<li><a href="releases.html">Press Releases</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Code.Inspire.Create.</h2>
-							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
-							</form>
-						</article>
+				</div>	
+			</header>
+			<section id="mentors" role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<h2 class="twelvecol title">Coderise Mentors</h2>
 					</div>
 				</section>
-			</div>
-
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>Coderise Mentors</h5>
-					<p>Each Saturday, after regular class from 8:00 AM to 11:00 AM, there will be informal talks with various Coderise mentors, successful professionals from the tech world.</p>
-
-					<article class="team">
-						<img src="images/Andres2.png" class="thumbs"/>
-						<div>
-							<h6 class="colorGreen">Andrés Barreto</h6>
-							<p class="email"><a href="http://twitter.com/andresbarreto">@andresbarreto</a></p>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="twelvecol">
+							<p>Each Saturday, after regular class from 8:00 AM to 11:00 AM, there will be informal talks with various Coderise mentors, successful professionals from the tech world.</p>
 						</div>
-						<p>Colombian entrepreneur,  co-founder of <a href="http://onswipe.com">Onswipe</a>, a platform for tablet publishing and advertising. He previously cofounded <a href="http://grooveshark.com">Grooveshark</a>, a leading music streaming app,  <a href="http://socialatomgroup.com">Socialatom Group</a>, a Tech and PR agency that also promotes entrepreneurship in the region with startup and tech blog <a href="http://pulsosocial.com">PulsoSocial</a>.</p>
-					</article>
-
-					<article class="team">
-						<img src="images/Alex.png" class="thumbs" />
-						<div>
-							<h6 class="colorGreen">Alex Torrenegra</h6>
-							<p class="email"><a href="http://twitter.com/torrenegra">@torrenegra</a></p>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="fourcol center">
+							<article>
+								<img src="images/Andres2.png" class="thumbs"/>
+								<h6>Andrés Barreto</h6>
+								<p>Colombian entrepreneur,  co-founder of <a class="link" href="http://onswipe.com">Onswipe</a>, a platform for tablet publishing and advertising. He previously cofounded <a class="link" href="http://grooveshark.com">Grooveshark</a>, a leading music streaming app,  <a class="link" href="http://socialatomgroup.com">Socialatom Group</a>, a Tech and PR agency that also promotes entrepreneurship in the region with startup and tech blog <a class="link" href="http://pulsosocial.com">PulsoSocial</a>.</p>
+								<p><a class="link" href="http://twitter.com/andresbarreto">@andresbarreto</a></p>
+							</article>
 						</div>
-						<p>Founder of <a href="http://torrenegralabs.com">Torrenegra Labs</a>, tech startup incubator in Bogotá, Colombia, and founder of <a href="http://voicebunny.com">VoiceBunny</a>, <a href="http://bookingmarkets.com">BookingMarkets</a>, <a href="http://wehostels.com/">WeHostels</a>, <a href="http://hubbog.com/es">HubBOG</a>, and others.<br/>
-						</p>
-					</article>
-
-					<article class="team">
-						<img src="images/Daniel.png" class="thumbs"/>
-						<div>
-							<h6 class="colorGreen">Daniel Loreto</h6>
-							<p class="email"><a href="http://twitter.com/DanielLoreto">@DanielLoreto</a></p>
+						<div class="fourcol center">
+							<article>
+								<img src="images/Alex.png" class="thumbs" />
+								<h6>Alex Torrenegra</h6>
+								<p>Founder of <a class="link" href="http://torrenegralabs.com">Torrenegra Labs</a>, tech startup incubator in Bogotá, Colombia, and founder of <a class="link" href="http://voicebunny.com">VoiceBunny</a>, <a class="link" href="http://bookingmarkets.com">BookingMarkets</a>, <a class="link" href="http://wehostels.com/">WeHostels</a>, <a class="link" href="http://hubbog.com/es">HubBOG</a>, and others.</p>
+								<p><a class="link" href="http://twitter.com/torrenegra">@torrenegra</a></p>
+							</article>
 						</div>
-						 Tech entrepreneur and software programmer.  After working for Google, founded social data analytic startup Julpan, and currently  is on the engineering team for <a href="http://twitter.com">Twitter</a>.<br/>
-						</p>
-					</article>
-
-					<article class="team">
-						<img src="images/Gisella.png" class="thumbs"/>
-						<div>
-							<h6 class="colorGreen">Gisella Borja</h6>
-							<p class="email"><a href="http://twitter.com/gigiborja">@gigiborja</a></p>
+						<div class="fourcol last center">
+							<article>
+								<img src="images/Daniel.png" class="thumbs"/>
+								<h6>Daniel Loreto</h6>
+								<p>Tech entrepreneur and software programmer.  After working for Google, founded social data analytic startup Julpan, and currently  is on the engineering team for <a class="link" href="http://twitter.com">Twitter</a>.</p>
+								<p><a class="link" href="http://twitter.com/DanielLoreto">@DanielLoreto</a></p>
+							</article>
 						</div>
-						<p>CTO of <a href="http://bookingmarkets.com/">Booking Markets</a>, online platform focused on travel and stay.</p>
-					</article>
-
-					<article class="team">
-						<img src="images/juanpablo.jpg" class="thumbs"/>
-						<div> 
-							<h6 class="colorGreen">Juan Pablo Buritica</h6>
-							<p class="email"><a href="http://twitter.com/buritica">@buritica</a></p>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="fourcol center">
+							<article>
+								<img src="images/Gisella.png" class="thumbs"/>
+								<h6>Gisella Borja</h6>
+								<p>CTO of <a class="link" href="http://bookingmarkets.com/">Booking Markets</a>, online platform focused on travel and stay.</p>
+								<p><a class="link" href="http://twitter.com/gigiborja">@gigiborja</a></p>
+							</article>
 						</div>
-						 Colombian entrepreneur and software engineer, he is currently the VP of Engineering at Onswipe. He is also founder and director of Bogotaconf, a conference dedicated to the highest quality software engineering topics. Formerly, he cofounded and was the Lead Engineer at Panelfly, a mobile comics distribution app.
-						</p>
-					</article>
-				</article>
-				<div class="clearfix"></div>
-			</div>
+						<div class="fourcol center">
+							<article>
+								<img src="images/juanpablo.jpg" class="thumbs"/>
+								<h6>Juan Pablo Buritica</h6>
+								<p>Colombian entrepreneur and software engineer, he is currently the VP of Engineering at Onswipe. He is also founder and director of Bogotaconf, a conference dedicated to the highest quality software engineering topics. Formerly, he cofounded and was the Lead Engineer at Panelfly, a mobile comics distribution app.
+								</p>
+								<p><a class="link" href="http://twitter.com/buritica">@buritica</a></p>
+							</article>
+						</div>
+					</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="mentores.html">Versión en español</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
