--- a/about.html
+++ b/about.html
@@ -2,120 +2,134 @@
 <html>
 	<head>
 		<title>Coderise :: About</title>
-
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
-				</div>
-				<div class="clearfix"></div>
-		</header>
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-							<button class="btn btn-mini disabled">English</button>
-							<button class="btn btn-mini"><a href="acerca.html">Español</a></button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li class="dropdown active">
+									<a>
+										About
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li class="active"><a href="about.html">About us</a></li>
+										<li><a href="how.html">How it works</a></li>
+										<li><a href="mentors.html">Mentors</a></li>
+										<li><a href="team.html">Our Team</a></li>
+										<li><a href="students.html">Our Students</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Press
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="press.html">Coverage</a></li>
+										<li><a href="releases.html">Press Releases</a></li>
+									</ul>
+								</li>
+								<li><a href="contribute.html">Support</a></li>
+								<li class="last"><a href="apply.html">Apply</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a>
-							<ul>
-								<li><a href="how.html">How It Works</a></li>
-								<li><a href="mentors.html">Mentors</a></li>
-								<li><a href="team.html">Our Team</a></li>
-								<li><a href="students.html">Our Students</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Support</a></li>
-						<li><a href="apply.html">Apply</a></li>
-						<li><a href="#">Press</a>
-							<ul>
-								<li><a href="press.html">Coverage</a></li>
-								<li><a href="releases.html">Press Releases</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Code.Inspire.Create.</h2>
-							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
-							</form>
-						</article>
+				</div>	
+			</header>
+			<section role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<h2 class="twelvecol title">About</h2>
 					</div>
 				</section>
-			</div>
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>About</h5>
-					<div>
-						<img src="images/kids_and_instructor.png" class="mini-thumb left" style="margin-top:45px"/>
-						<div class="right">
-							<p class="colorGreen">Mission</p>
-							<p>Our mission is to empower high-school students with demonstrated potential by giving them the tools and inspiration to dive into tech innovation and tap into their entrepreneurial spirit.</p>
-							<p class="colorGreen">Objectives</p>
-							<ul>
-								<li>Graduate 15 students from the Coderise pilot program</li>
-								<li>Launch the first Coderise Hackathon at the end of the program</li>
-								<li>Achieve a basic level of Javascript for 70 percent of students</li>
-							</ul>
+				<section id="mission" class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Mission</h4>
+						</div>
+						<div class="fivecol">
+							<p style="text-align: justify;">Our mission is to empower high-school students with demonstrated potential by giving them the tools and inspiration to dive into tech innovation and tap into their entrepreneurial spirit.</p>
+						</div>
+						<div class="fourcol last">
+							<img src="images/kids_and_instructor.png" class="mini-thumb left">
 						</div>
 					</div>
-					<div class="clearfix"></div>
-					<div>
-						<p class="colorGreen">Impact</p>
-						<div class="left">
+				</section>
+				<section id="objectives" class="wrap-mini wrap-gray container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Objectives</h4>
+						</div>
+						<ul class="ninecol last">
+							<li>
+								<p><span class="dropcap">G</span>raduate 15 students from the Coderise pilot program</p>
+							</li>
+							<li>
+								<p><span class="dropcap">L</span>aunch the first Coderise Hackathon at the end of the program</p>
+							</li>
+							<li>
+								<p><span class="dropcap">A</span>chieve a basic level of Javascript for 70 percent of students</p>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Impact</h4>
+						</div>
+						<div class="ninecol last">
 							<p>Coderise provides foundations for the students to participate in:</p>
-							<ul>
-								<li>Local accelerators</li>
-								<li>Local technology firms</li>
-								<li>International tech companies</li>
-								<li>Building their own products and bringing their ideas to life</li>
+							<ul class="square">
+								<li><p>Local accelerators</p></li>
+								<li><p>Local technology firms</p></li>
+								<li><p>International tech companies</p></li>
+								<li><p>Building their own products and bringing their ideas to life</p></li>
 							</ul>
-						</div>
-						<div class="right">
+							<br>
 							<p>As a result, students will be able to:</p>
-							<ul>
-								<li>Stay in school</li>
-								<li>Contribute to their families</li>
-								<li>Land scholarships and create income to pay for school</li>
+							<ul class="square">
+								<li><p>Stay in school</p></li>
+								<li><p>Contribute to their families</p></li>
+								<li><p>Land scholarships and create income to pay for school</p></li>
 							</ul>
+							<br>
+							<p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
 						</div>
 					</div>
-					<div class="clearfix"></div>
-					<p class="infobox">Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
-				</article>
-			<div class="clearfix"></div>
-			</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="acerca.html">Versión en español</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
