--- a/acerca.html
+++ b/acerca.html
@@ -1,121 +1,135 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Coderise :: Sobre Coderise</title>
-
+		<title>Coderise :: Acerca</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
-				</div>
-				<div class="clearfix"></div>
-		</header>
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini"><a href="about.html">English</a></button>
-  						<button class="btn btn-mini disabled">Español</button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index-es.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li><a href="index-es.html">Inicio</a></li>
+								<li class="dropdown active">
+									<a>
+										Acerca
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li class="active"><a href="acerca.html">Sobre Coderise</a></li>
+										<li><a href="como.html">Como funciona</a></li>
+										<li><a href="mentores.html">Mentores</a></li>
+										<li><a href="equipo.html">Equipo</a></li>
+										<li><a href="estudiantes.html">Estudiantes</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Prensa
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="prensa.html">Cubrimiento</a></li>
+										<li><a href="comunicados.html">Comunicados</a></li>
+									</ul>
+								</li>
+								<li><a href="apoya.html">Apoya</a></li>
+								<li class="last"><a href="aplica.html">Aplica</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li><a href="index-es.html">Inicio</a></li>
-						<li class="active"><a href="acerca.html">Sobre Coderise</a>
-							<ul>
-								<li><a href="como.html">Como funciona</a></li>
-								<li><a href="mentores.html">Mentores</a></li>
-								<li><a href="team.html">Equipo</a></li>
-								<li><a href="estudiantes.html">Estudiantes</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Apoya</a></li>
-						<li><a href="aplica.html">Aplica</a></li>
-						<li><a href="#">Prensa</a>
-							<ul>
-								<li><a href="prensa.html">Cubrimiento</a></li>
-								<li><a href="comunicados.html">Comunicados</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Programa.Inspira.Crea.</h2>
-							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
-							</form>
-						</article>
+				</div>	
+			</header>
+			<section role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<h2 class="twelvecol title">Sobre Coderise</h2>
 					</div>
 				</section>
-			</div>
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>Sobre Coderise</h5>
-					<div>
-						<img src="images/kids_and_instructor.png" class="mini-thumb left" style="margin-top:45px"/>
-						<div class="right">
-							<p class="colorGreen">La Misión</p>
-							<p>Nuestra misión es empoderar a jóvenes de bajos recursos y gran potencial dándoles las herramientas e inspiración para que puedan ser inovadores de tecnología y futuros emprendedores digitales.</p>
-							<p class="colorGreen">Objetivos</p>
-							<ul>
-								<li>Graduar 15 estudiantes del programa piloto de Coderise</li>
-								<li>Lanzar la primera Hackathon al final del programa</li>
-								<li>Posibilitar que el 70 por ciento de los estudiantes alcance un nivel básico de Javascript</li>
-							</ul>
+				<section id="mission" class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Misi&oacute;n</h4>
+						</div>
+						<div class="fivecol">
+							<p style="text-align: justify;">Nuestra misi&oacute;n es empoderar a j&oacute;venes de bajos recursos y gran potencial d&aacute;ndoles las herramientas e inspiraci&oacute;n para que puedan ser inovadores de tecnolog&iacute;a y futuros emprendedores digitales.</p>
+						</div>
+						<div class="fourcol last">
+							<img src="images/kids_and_instructor.png" class="mini-thumb left">
 						</div>
 					</div>
-					<div class="clearfix"></div>
-					<div>
-						<p class="colorGreen">Impacto</p>
-						<div class="left">
-							<p>Coderise provee conociemientos básicos con los cuales a largo plazo los jóvenes podrían participar en:</p>
-							<ul>
-								<li>Aceleradoras de startups tecnológicas</li>
-								<li>Startups y empresas tecnológicas</li>
-								<li>Corporaciones internacionales de tecnología</li>
-								<li>Crear sus propias iniciativas</li>
-							</ul>
+				</section>
+				<section id="objectives" class="wrap-mini wrap-gray container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Objectivos</h4>
 						</div>
-						<div class="right">
+						<ul class="ninecol last">
+							<li>
+								<p><span class="dropcap">G</span>raduar 15 estudiantes del programa piloto de Coderise</p>
+							</li>
+							<li>
+								<p><span class="dropcap">L</span>anzar la primera Hackathon al final del programa</p>
+							</li>
+							<li>
+								<p><span class="dropcap">P</span>osibilitar que el 70 por ciento de los estudiantes alcance un nivel b&aacute;sico de Javascript</p>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Impacto</h4>
+						</div>
+						<div class="ninecol last">
+							<p>Coderise provee conocimientos b&aacute;sicos con los cuales a largo plazo los j&oacute;venes podr&iacute;an participar en:</p>
+							<ul class="square">
+								<li><p>Aceleradoras de startups tecnol&oacute;gicas</p></li>
+								<li><p>Startups y empresas tecnol&oacute;gicas</p></li>
+								<li><p>Corporaciones internacionales de tecnolog&iacute;a</p></li>
+								<li><p>Crear sus propias iniciativas</p></li>
+							</ul>
+							<br>
 							<p>A la vez, estas oportunidades resultán en jóvenes:</p>
-							<ul>
-								<li>Quienes terminan la secundaria y con más probabilidades de ir a la universidad</li>
-								<li>Contribuyen a sus familias</li>
-								<li>Conseguir becas y otro respaldo financiero para acceder a educación superior</li>
+							<ul class="square">
+								<li><p>Quienes terminan la secundaria y con más probabilidades de ir a la universidad</p></li>
+								<li><p>Contribuyen a sus familias</p></li>
+								<li><p>Conseguir becas y otro respaldo financiero para acceder a educaci&oacute;n superior</p></li>
 							</ul>
+							<br>
+							<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
 						</div>
 					</div>
-					<div class="clearfix"></div>
-					<p class="infobox">Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-				</article>
-			<div class="clearfix"></div>
-			</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="about.html">English version</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
