--- a/apply.html
+++ b/apply.html
@@ -2,143 +2,138 @@
 <html>
 	<head>
 		<title>Coderise :: Apply</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
 
 		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<div>
-					<a href="http://coderise.org"><h1>//coderise</h1></a>
-				</div>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>	
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</header>
-
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini disabled">English</button>
-  						<button class="btn btn-mini"><a href="aplica.html">Español</a></button>
-					</div>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
 							<ul>
-								<li><a href="how.html">How It Works</a></li>
-								<li><a href="mentors.html">Mentors</a></li>
-								<li><a href="team.html">Our Team</a></li>
-								<li><a href="students.html">Our Students</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li class="dropdown">
+									<a>
+										About
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="about.html">About us</a></li>
+										<li><a href="how.html">How it works</a></li>
+										<li><a href="mentors.html">Mentors</a></li>
+										<li><a href="team.html">Our Team</a></li>
+										<li><a href="students.html">Our Students</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Press
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="press.html">Coverage</a></li>
+										<li><a href="releases.html">Press Releases</a></li>
+									</ul>
+								</li>
+								<li><a href="contribute.html">Support</a></li>
+								<li class="last active"><a href="apply.html">Apply</a></li>
 							</ul>
-						</li>
-						<li><a href="contribute.html">Support</a></li>
-						<li class="active"><a href="apply.html">Apply</a></li>
-						<li><a href="#">Press</a>
-							<ul>
-								<li><a href="press.html">Coverage</a></li>
-								<li><a href="releases.html">Press Releases</a></li>
-							</ul>
-						</li>
-					</ul>
+						</nav>
+					</div>
 				</div>
-			</div>
+			</header>
+			<section role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<div class="twelvecol">
+							<h2 class="title">Applying to Coderise</h2>
+						</div>
+					<div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="twelvecol">
+							<h5>Who can apply for Coderise 2013?</h5>
+							<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.</p>
+							<br>
+							<p>Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
+							<br>
+							<h6>Applications will be open April 20!</h6>
+							<!--
+							<p class="colorGreen">¡Inscríbase ya!</p>
 
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Code.Inspire.Create.</h2>
-							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
+							<p>Coderise está desde ya aceptando inscripciones para el primer programa piloto en Medellín. La convocatoria finalizará el 21 de Septiembre, las clases empezarán el 9 de octubre y serán dictadas en las instalaciones de Intergrupo. Para inscribirte solo debes diligenciar el formulario que se encuentra al final de esta página. La información que nos proveas será analizada por nuestro equipo humano de Coderise y en caso de ser elegido, serás llamado para una entrevista.</p>
 
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
-							</form>
-						</article>
+
+							<p>Aquí te dejamos algunas pautas que te ayudarán a completar tu formulario de la mejor manera posible:</p>
+
+							<ul>
+
+								<li>Tómate el tiempo necesario para pensar bien tus respuestas</li>
+								<li>Sé sincero</li>
+								<li>Anota las respuestas primero en un documento separado. Una vez las hayas completado todas, cópialas y pégalas en el formulario de nuestro sitio web. Esto es para prevenir que por algún motivo técnico se pierdan las respuestas antes de enviar la aplicación.</li>
+
+							</ul>
+							</article>
+							<section class="contact">
+								<p><b>Si tienes alguna pregunta, escríbenos a <a href="mailto:equipo@coderise.org">equipo@coderise.org.</a></b></p>
+							</section>
+							<article class="full-width">
+								<p class="colorGreen">Programación</p>
+
+								<ul>
+									<li> <span class="colorGreen">27 de agosto: </span> Lanzamiento de convocatoria a jóvenes (ya pueden inscribirse)</li>
+									<li> <span class="colorGreen">21 de septiembre: </span> Conclusión de convocatoria</li>
+									<li> <span class="colorGreen">21 de septiembre: </span> Ultimo dia para determinar quien va a la segunda ronda de entrevistas</li>
+									<li> <span class="colorGreen">21-28 de septiembre: </span> Entrevistas a los finalistas</li>
+									<li> <span class="colorGreen">1 de octubre: </span> Resultados de los 20 aceptados</li>
+									<li> <span class="colorGreen">9 de octubre: </span> Primer dia de clases</li>
+									<li> <span class="colorGreen">1 de diciembre: </span> Último dia de clases. Sujeto a re-ajustes.</li>
+								</ul>
+
+								<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
+							</article>				
+							<div class="clearfix"></div>
+							
+							<section class="apply-forms">
+								<article>
+									<a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Formulario de Aplicación</a>
+								</article>
+								<br/>
+								<iframe height="3115" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="http://coderise.wufoo.com.mx/embed/z7x3p9/"><a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Fill out my Wufoo form!</a></iframe>
+								<div class="clearfix"></div>
+
+							</section>
+							-->
+						</div>
 					</div>
 				</section>
-			</div>
-
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>Applying to Coderise</h5>
-					<p class="colorGreen">Who can apply for Coderise 2013?</p>
-
-					<p>Coderise seeks students that are self-motivated and curious to learn about technology and software development.
-					<br>
-					<br>
-					Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.
-					<br>
-					<br>
-					Applications will be open April 20!</p>
-					<!--
-					<p class="colorGreen">¡Inscríbase ya!</p>
-
-					<p>Coderise está desde ya aceptando inscripciones para el primer programa piloto en Medellín. La convocatoria finalizará el 21 de Septiembre, las clases empezarán el 9 de octubre y serán dictadas en las instalaciones de Intergrupo. Para inscribirte solo debes diligenciar el formulario que se encuentra al final de esta página. La información que nos proveas será analizada por nuestro equipo humano de Coderise y en caso de ser elegido, serás llamado para una entrevista.</p>
-
-
-					<p>Aquí te dejamos algunas pautas que te ayudarán a completar tu formulario de la mejor manera posible:</p>
-
-					<ul>
-
-						<li>Tómate el tiempo necesario para pensar bien tus respuestas</li>
-						<li>Sé sincero</li>
-						<li>Anota las respuestas primero en un documento separado. Una vez las hayas completado todas, cópialas y pégalas en el formulario de nuestro sitio web. Esto es para prevenir que por algún motivo técnico se pierdan las respuestas antes de enviar la aplicación.</li>
-
-					</ul>
-				</article>
-				<section class="contact">
-					<p><b>Si tienes alguna pregunta, escríbenos a <a href="mailto:equipo@coderise.org">equipo@coderise.org.</a></b></p>
-				</section>
-				<article class="full-width">
-					<p class="colorGreen">Programación</p>
-
-					<ul>
-						<li> <span class="colorGreen">27 de agosto: </span> Lanzamiento de convocatoria a jóvenes (ya pueden inscribirse)</li>
-						<li> <span class="colorGreen">21 de septiembre: </span> Conclusión de convocatoria</li>
-						<li> <span class="colorGreen">21 de septiembre: </span> Ultimo dia para determinar quien va a la segunda ronda de entrevistas</li>
-						<li> <span class="colorGreen">21-28 de septiembre: </span> Entrevistas a los finalistas</li>
-						<li> <span class="colorGreen">1 de octubre: </span> Resultados de los 20 aceptados</li>
-						<li> <span class="colorGreen">9 de octubre: </span> Primer dia de clases</li>
-						<li> <span class="colorGreen">1 de diciembre: </span> Último dia de clases. Sujeto a re-ajustes.</li>
-					</ul>
-
-					<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-				</article>				
-				<div class="clearfix"></div>
-				
-				<section class="apply-forms">
-					<article>
-						<a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Formulario de Aplicación</a>
-					</article>
-					<br/>
-					<iframe height="3115" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="http://coderise.wufoo.com.mx/embed/z7x3p9/"><a href="http://coderise.wufoo.com.mx/forms/z7x3p9/">Fill out my Wufoo form!</a></iframe>
-					<div class="clearfix"></div>
-
-				</section>
-				-->
-				<div class="clearfix"></div>
-			</div>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="aplica.html">Versión en español</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
