--- a/como.html
+++ b/como.html
@@ -3,144 +3,145 @@
 	<head>
 		<title>Coderise :: Como funciona</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<div>
-					<a href="http://coderise.org"><h1>//coderise</h1></a>
-				</div>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>	
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</header>
-
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini"><a href="how.html">English</a></button>
-  						<button class="btn btn-mini disabled">Español</button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index-es.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li><a href="index-es.html">Inicio</a></li>
+								<li class="dropdown active">
+									<a>
+										Acerca
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="acerca.html">Sobre Coderis</a></li>
+										<li class="active"><a href="como.html">Como funciona</a></li>
+										<li><a href="mentores.html">Mentores</a></li>
+										<li><a href="equipo.html">Equipo</a></li>
+										<li><a href="estudiantes.html">Estudiantes</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Prensa
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="prensa.html">Cubrimiento</a></li>
+										<li><a href="comunicados.html">Comunicados</a></li>
+									</ul>
+								</li>
+								<li><a href="apoya.html">Apoya</a></li>
+								<li class="last"><a href="aplica.html">Aplica</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li><a href="index-es.html">Inicio</a></li>
-						<li class="active"><a href="acerca.html">Sobre Coderise</a>
-							<ul>
-								<li class="active"><a href="como.html">Como funciona</a></li>
-								<li><a href="mentores.html">Mentores</a></li>
-								<li><a href="team.html">Equipo</a></li>
-								<li><a href="estudiantes.html">Estudiantes</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Apoya</a></li>
-						<li><a href="aplica.html">Aplica</a></li>
-						<li><a href="#">Prensa</a>
-							<ul>
-								<li><a href="prensa.html">Cubrimiento</a></li>
-								<li><a href="comunicados.html">Comunicados</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Programa.Inspira.Crea.</h2>
-							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
-							</form>
-						</article>
+				</div>	
+			</header>
+			<section role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<h2 class="twelvecol title">Como funciona</h2>
 					</div>
 				</section>
-			</div>
-
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>¿Cómo funciona Coderise?</h5>
-					<img src="images/kids_and_computer.png" class="mini-thumb"/>
-
-					<p class="colorGreen">Duración y estructura</p>
-
-					<p>El programa piloto gratuito de Coderise empezará el 9 de Octubre con 20 estudiantes de la ciudad de Medellín, Colombia. Durante 8 semanas aprenderán a conceptos sobre computación y desarrollo de software, enfocado a aplicaciones web, bajo las instrucciones de dos instructores. Para complementar las clases, los participantes tendrán la oportunidad de conocer y hablar con emprendedores e ingenieros de Colombia y de los Estados Unidos.</p> 
-					<p>Las clases están dividas en dos partes.  La primera mitad de cada clase se enfoca en aprendizaje de conceptos y la segunda mitad en la  aplicación de los mismo en un proyecto para diseñar una aplicación web.  Al finalizar el programa, los participantes presentarán sus proyectos durante la última semana del programa.</p>
-
-
-					<p class="colorGreen">Temas de aprendizaje en Coderise</p>
-
-					<p>Al finalizar el programa los coderisers estarán en capacidad de:</p>
-
-					<ul>
-
-						<li>Reconocer y entender tecnologías para el desarrollo de aplicaciones web tales como HTML, CSS, Javascript, Ruby On Rails y bases de datos.</li>
-						<li>Explicar y enseñar conceptos aprendidos a otros estudiantes</li>
-						<li>Aprender a aprender</li>
-						<li>Entender  que el fracaso hace parte del proceso de aprendizaje</li>
-						<li>Entender la comunidad de software libre, sus beneficios y cómo contribuidor a ella</li>
-						<li>Identificar problemas en su comunidad  y proponer soluciones por medio del desarrollo de software</li>
-						<li>Crear un Producto Mínimo Viable</li>
-
-					</ul>
-
-					<p class="colorGreen">Mentores de Coderise</p>
-
-					<p>Cada Sábado, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.  Estos contarán sus experiencias, hablarán de su trayecto como profesionales y estarán abiertos a preguntas de los coderisers. <a href="mentores.html">[Conoce más de los mentores de Coderise aquí]</a></p>
-
-					<p class="colorGreen">Actividades y eventos de Coderise</p>
-
-					<ul>
-						<li>Visita recreativa al Parque Arví con el grupo</li>
-						<li>Meetups de comunidad de programadores en Medellín</li>
-						<li>Mini Coderise Hackathon (aún por confirmar)</li>
-					</ul>
-
-					<p class="colorGreen">Itinerario de Programa Coderise</p>
-					<br/>
-					<br/>
-					<img src="images/coderise_calendar_ESP.jpg" class="resize-image" />
-					<br/>
-					<br/>
-					<p class="colorGreen">Fechas de Programa Coderise</p>
-
-					<p>Primer día de clases: 9 de octubre</p>
-
-					<p>Ultimo día de clases: 1 de diciembre</p>
-
-					<p>Semana 9: Reservada para reponer horas de clases perdida</p>
-
-					<p>Itinerario Diario para Coderise (Semanas 1-8)</p>
-
-					<p>Martes y Jueves: 5:00 PM – 8:00 PM</p>
-
-					<p>Sábado: 8:00 AM -1:00 PM</p>
-
-				</article>
-			<div class="clearfix"></div>
-			</div>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Duración y estructura</h4>
+						</div>
+						<div class="ninecol last">
+							<p style="text-align: justify;">Durante 9 semanas los estudiantes de Coderise aprenderán a conceptos sobre computación y desarrollo de software, enfocado a aplicaciones web, bajo las instrucciones de dos instructores. Para complementar las clases, los participantes tendrán la oportunidad de conocer y hablar con emprendedores e ingenieros de Colombia y de los Estados Unidos.</p>
+							</br>
+							<p style="text-align: justify;">Las clases están dividas en dos partes.  La primera mitad de cada clase se enfoca en aprendizaje de conceptos y la segunda mitad en la  aplicación de los mismo en un proyecto para diseñar una aplicación web.  Al finalizar el programa, los participantes presentarán sus proyectos durante la última semana del programa.</p>
+						</div>
+						
+					</div>
+				</section>
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Temas de aprendizaje</h4>
+						</div>
+						<div class="ninecol last">
+							<p>Al finalizar el programa los coderisers estarán en capacidad de:</p>
+							</br>
+							<ul class="square">
+								<li><p>Reconocer y entender tecnologías para el desarrollo de aplicaciones web tales como HTML, CSS, Javascript, Ruby on Rails y bases de datos.</p></li>
+								<li><p>Explicar y enseñar conceptos aprendidos a otros estudiantes</p></li>
+								<li><p>Aprender a aprender</p></li>
+								<li><p>Entender  que el fracaso hace parte del proceso de aprendizaje</li>
+								<li><p>Entender la comunidad de software libre, sus beneficios y cómo contribuidor a ella</p></li>
+								<li><p>Identificar problemas en su comunidad  y proponer soluciones por medio del desarrollo de software</p></li>
+								<li><p>Crear un Producto Mínimo Viable</p></li>
+							</ul>
+						</div>
+						
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Actividades y eventos de Coderise</h4>
+						</div>
+						<div class="ninecol last">
+							<ul class="square">
+								<li><p>Visita recreativa al Parque Arví con el grupo</p></li>
+								<li><p>Meetups de comunidad de programadores en Medellín</p></li>
+								<li><p>Mini Coderise Hackathon (aún por confirmar)</p></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Mentores de Coderise</h4>
+						</div>
+						<div class="ninecol last">
+							<p>Cada Sábado, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.  Estos contarán sus experiencias, hablarán de su trayecto como profesionales y estarán abiertos a preguntas de los coderisers. <a class="link" href="mentors.html">[Conoce más de los mentores de Coderise aquí]</a></p>
+						</div>
+					</div>
+				</section>
+				<section class="impact wrap-mini container">
+					<div class="row">
+						<div class="threecol">
+							<h4>Itinerario de Programa Coderise</h4>
+						</div>
+						<div class="ninecol last">
+							<p>El programa de Coderise dura 9 semanas, y usualmente se desarrolla Martes y Jueves después del colegio de 5:00 a 8:00 p.m., y Sábados de 9:00 a.m. a 1:00 p.m. El itinerario para Medellín y Bogotá 2013 será publicado en Abril 20.</p>
+						</div>
+					</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="how.html">English version</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
