--- a/index-es.html
+++ b/index-es.html
@@ -2,141 +2,163 @@
 <html>
 	<head>
 		<title>:: Coderise ::</title>
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
-				</div>
-				<div class="clearfix"></div>
-		</header>
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini"><a href="index.html">English</a></button>
-  						<button class="btn btn-mini disabled">Español</button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index-es.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li class="active"><a href="index-es.html">Inicio</a></li>
+								<li class="dropdown">
+									<a>
+										Acerca
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="acerca.html">Sobre Coderise</a></li>
+										<li><a href="como.html">Como funciona</a></li>
+										<li><a href="mentores.html">Mentores</a></li>
+										<li><a href="equipo.html">Equipo</a></li>
+										<li><a href="estudiantes.html">Estudiantes</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Prensa
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="prensa.html">Cubrimiento</a></li>
+										<li><a href="comunicados.html">Comunicados</a></li>
+									</ul>
+								</li>
+								<li><a href="apoya.html">Apoya</a></li>
+								<li class="last"><a href="aplica.html">Aplica</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="acerca.html">Sobre Coderise</a>
-							<ul>
-								<li><a href="como.html">Como funciona</a></li>
-								<li><a href="mentores.html">Mentores</a></li>
-								<li><a href="team.html">Equipo</a></li>
-								<li><a href="estudiantes.html">Estudiantes</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Apoya</a></li>
-						<li><a href="aplica.html">Aplica</a></li>
-						<li><a href="#">Prensa</a>
-							<ul>
-								<li><a href="prensa.html">Cubrimiento</a></li>
-								<li><a href="comunicados.html">Comunicados</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>		
-			</div>
-			<div id="head">
-				<section>
-					<div class="wrap">
+				</div>	
+			</header>
+			<header role="promo" class="container">
+				<div class="row">
+					<div class="sixcol">
+						<div class="video">
+							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
+						</div>
+					</div>
+					<div class="sixcol last">
 						<article>
-							<h2>Programa.Inspira.Crea.</h2>
-							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
+							<h1>Programa.Inspira.Crea.</h1>
+							<p>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</p>
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
+								<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
 							</form>
 						</article>
 					</div>
+				</div>
+			</header>
+			<section role="content">
+				<section id="email-banner" class="wrap wrap-gray container">
+					<div class="row">
+						<div class="sixcol">
+					        <h5>Inf&oacute;rmate sobre la Comunidad Coderise!</h5>
+					    </div>
+						<form id="signup_form" class="sixcol last">
+							<input id="email" class="email-input" type="email" placeholder="Ingresa tu email" name="email" size="64">
+							<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Unirse">
+						</form>
+					</div>
 				</section>
-			</div>
-			<div id="wrapper">
-				<div id="slider">
-					<div>
-						<section id="intro">
-							<article>
-							<p>En los pa&iacute;ses en desarrollo muy a menudo las oportunidades existentes para avanzar en la escala econ&oacute;mica y social son limitadas. Hoy el internet y la tecnolog&iacute;a han democratizado esta oportunidad. Coderise no solamente genera acceso a la tecnolog&iacute;a sino que tambi&eacute;n les ense&ntilde;a a los chicos c&oacute;mo crear con ella.</p>
-
-							<p>Ya sea para conseguir trabajo independiente con clientes globales, puestos internos con firmas locales desarrolladoras de software o incluso empezar sus propios startups tecnol&oacute;gicos, Coderise ofrece todas las habilidades, herramientas y conexiones necesarias para desarrollar todo su potencial.</p>
-
-							<p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estarán cubiertos.</p>
-							</article>
-
-						</section>
-						<section id="video">
-							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
-							<h6 style="margin-top: 20px;">Mantente informado sobre la Comunidad Coderise!</h6>
-							<div class="input" style="background: rgba(45,169,171,0.2);margin-top: 20px;">
-								<form id="signup_form">
-									<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64" style="margin-right: 30px;">
-									<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Suscribir">
-								</form>
+				<section id="description" class="wrap container">
+					<div class="row">
+						<div class="sixcol">
+					        <p>En los pa&iacute;ses en desarrollo muy a menudo las oportunidades existentes para avanzar en la escala econ&oacute;mica y social son limitadas. Hoy el internet y la tecnolog&iacute;a han democratizado esta oportunidad. Coderise no solamente genera acceso a la tecnolog&iacute;a sino que tambi&eacute;n les ense&ntilde;a a los chicos c&oacute;mo crear con ella.</p>
+					        <p>Ya sea para conseguir trabajo independiente con clientes globales, puestos internos con firmas locales desarrolladoras de software o incluso empezar sus propios startups tecnol&oacute;gicos, Coderise ofrece todas las habilidades, herramientas y conexiones necesarias para desarrollar todo su potencial.</p>
+					        <p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estar&aacute;n cubiertos.</p>
+					    </div>
+					    <div class="sixcol last center">
+					    	<div class="video">
+								<iframe width="100%" height="100%" src="http://www.youtube.com/v/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
-						</section>
+						</div>
+					</div>
+				</section>
+				<section id="keypoints" class="wrap wrap-gray container">
+					<div class="row">
+						<h3>Coderise busca:</h3>
+						<ul>
+							<li class="threecol">
+								<article>
+									<h6>Ense&ntilde;ar para crear</h6>
+									<p>Coderise se enfoca en las habilidades de programaci&oacute;n que tienen una alta demanda y que proporcionar&aacute;n a los estudiantes las herramientas para salir y empezar a crear.</p>
+								</article>
+							</li>
+							<li class="threecol">
+								<article>
+									<h6>Inspirar con el ejemplo</h6>
+									<p>Coderise trae a los m&aacute;s reconocidos emprendedores tecnol&oacute;gicos y programadores para compartir inspiraci&oacute;n y conocimientos t&eacute;cnicos de su trabajo.</p>
+								</article>
+							</li>
+							<li class="threecol">
+								<article>
+									<h6>Aprendizaje del mundo real</h6>
+									<p>Coderise brinda un programa de 8 semanas de entrenamiento intensivo que impulsa el aprendizaje de creaci&oacute;n de productos a trav&eacute;s de proyectos y el trabajo en equipo.</p>
+								</article>
+							</li>
+							<li class="threecol last">
+								<article>
+									<h6>Conectar a las oportunidades</h6>
+									<p>Coderise conecta a los estudiantes con  oportunidades de pr&aacute;cticas para continuar aprendiendo, creando y colaborando.</p>
+								</article>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section id="sponsors" class="wrap container">
+					<div class="row">
+						<h3>Nuestros patrocinadores</h3>
+						<div class="slogo">
+							<div class="threecol">
+								<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
+							</div>
+							<div class="threecol">
+								<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55"/></a>
+							</div>
+						</div>
+					</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="index.html">English version</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
 					</div>
 				</div>
-				<div class="clearfix"></div>	
-				<section>
-					<h4>Coderise busca:</h4>
-					<div>
-						<article>
-							<h5>Ense&ntilde;ar para crear</h5>
-
-							<p>Coderise se enfoca en las habilidades de programaci&oacute;n que tienen una alta demanda y que proporcionar&aacute;n a los estudiantes las herramientas para salir y empezar a crear.</p>
-						</article>
-
-						<article>
-							<h5>Inspirar con el ejemplo</h5>
-
-							<p>Coderise trae a los m&aacute;s reconocidos emprendedores tecnol&oacute;gicos y programadores para compartir inspiraci&oacute;n y conocimientos t&eacute;cnicos de su trabajo.</p>
-						</article>
-
-						<article>
-							<h5>Aprendizaje del mundo real</h5>
-
-							<p>Coderise brinda un programa de 8 semanas de entrenamiento intensivo que impulsa el aprendizaje de creaci&oacute;n de productos a trav&eacute;s de proyectos y el trabajo en equipo.</p>
-						</article>
-
-						<article>
-							<h5>Conectar a las oportunidades</h5>
-
-							<p>Coderise conecta a los estudiantes con  oportunidades de pr&aacute;cticas para continuar aprendiendo, creando y colaborando.</p>
-						</article>
-					</div>
-				</section>
-				<div class="clearfix"></div>
-				<section>
-					<h4>Nuestros patrocinadores</h4>
-
-					<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30" class="slogo"/></a>
-
-					<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55" class="slogo"/></a>
-				</section>
-				<div class="clearfix"></div>
-			</div>
+			</footer>
 		</div>
 		<script type="text/javascript" src="js/kickofflabs.js"> </script>
 	</body>
