--- a/index.html
+++ b/index.html
@@ -2,141 +2,163 @@
 <html>
 	<head>
 		<title>:: Coderise ::</title>
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
 
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>
-				</div>
-				<div class="clearfix"></div>
-		</header>
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini disabled">English</button>
-  						<button class="btn btn-mini"><a href="index-es.html">Español</a></button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li class="active"><a href="index.html">Home</a></li>
+								<li class="dropdown">
+									<a>
+										About
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="about.html">About us</a></li>
+										<li><a href="how.html">How it works</a></li>
+										<li><a href="mentors.html">Mentors</a></li>
+										<li><a href="team.html">Our Team</a></li>
+										<li><a href="students.html">Our Students</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Press
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="press.html">Coverage</a></li>
+										<li><a href="releases.html">Press Releases</a></li>
+									</ul>
+								</li>
+								<li><a href="contribute.html">Support</a></li>
+								<li class="last"><a href="apply.html">Apply</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a>
-							<ul>
-								<li><a href="how.html">How It Works</a></li>
-								<li><a href="mentors.html">Mentors</a></li>
-								<li><a href="team.html">Our Team</a></li>
-								<li><a href="students.html">Our Students</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Support</a></li>
-						<li><a href="apply.html">Apply</a></li>
-						<li><a href="#">Press</a>
-							<ul>
-								<li><a href="press.html">Coverage</a></li>
-								<li><a href="releases.html">Press Releases</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>		
-			</div>
-			<div id="head">
-				<section>
-					<div class="wrap">
+				</div>	
+			</header>
+			<header role="promo" class="container">
+				<div class="row">
+					<div class="sixcol">
+						<div class="video">
+							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
+						</div>
+					</div>
+					<div class="sixcol last">
 						<article>
-							<h2>Code.Inspire.Create.</h2>
-							<h3>Coderise empowers young students in developing nations by teaching them how to build great web applications.</h3>
+							<h1>Code.Inspire.Create</h1>
+							<p>Coderise empowers young students in developing nations by teaching them how to build great web applications.</p>
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+								<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
 							</form>
 						</article>
 					</div>
+				</div>
+			</header>
+			<section role="content">
+				<section id="email-banner" class="wrap wrap-gray container">
+					<div class="row">
+						<div class="sixcol">
+					        <h5>Keep up with the Coderise Community!</h5>
+					    </div>
+						<form id="signup_form" class="sixcol last">
+							<input id="email" class="email-input" type="email" placeholder="Enter Your Email" name="email" size="64">
+							<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Join">
+						</form>
+					</div>
 				</section>
-			</div>
-			<div id="wrapper">
-				<div id="slider">
-					<div>
-						<section id="intro">
-							<article>
-							<p>In developing nations, very often opportunities for going up the economic and social ladder are limited. Today, the internet and technology have democratized this opportunity. Coderise not only creates access to technology but also teaches kids how to create with it.</p>
-
-							<p>Whether it's getting freelance jobs with global clients, internships with local software development firms or even starting their own tech startups, Coderise will offer all the skills, tools and connections necessary to realize their full potential.</p>
-
-							<p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
-							</article>
-
-						</section>
-						<section id="video">
-							<iframe width="100%" height="100%" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="http://player.vimeo.com/video/47140918?title=0&byline=0&portrait=0"></iframe>
-							<h6 style="margin-top: 20px;">Keep up with the Coderise Community!</h6>
-							<div class="input" style="background: rgba(45,169,171,0.2);margin-top: 20px;">
-								<form id="signup_form">
-									<input id="email" class="email-input" type="text" placeholder="Enter Your Email" name="email" size="64" style="margin-right: 30px;">
-									<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Join">
-								</form>
+				<section id="description" class="wrap container">
+					<div class="row">
+						<div class="sixcol">
+					        <p>In developing nations, very often opportunities for going up the economic and social ladder are limited. Today, the internet and technology have democratized this opportunity. Coderise not only creates access to technology but also teaches kids how to create with it.</p>
+					        <p>Whether it's getting freelance jobs with global clients, internships with local software development firms or even starting their own tech startups, Coderise will offer all the skills, tools and connections necessary to realize their full potential.</p>
+					        <p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
+					    </div>
+					    <div class="sixcol last center">
+					    	<div class="video">
+								<iframe width="100%" height="100%" src="http://www.youtube.com/v/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
-						</section>
+						</div>
+					</div>
+				</section>
+				<section id="keypoints" class="wrap wrap-gray container">
+					<div class="row">
+						<h3>Coderise seeks to:</h3>
+						<ul>
+							<li class="threecol">
+								<article>
+									<h6>Teach to create</h6>
+									<p>Coderise focuses on the programming skills that are in high demand and that will provide students with the tools to go out there and start creating.</p>
+								</article>
+							</li>
+							<li class="threecol">
+								<article>
+									<h6>Inspire by Example</h6>
+									<p>Coderise brings the most recognized tech entrepreneurs and programmers to share inspiring and technical know-how on their work.</p>
+								</article>
+							</li>
+							<li class="threecol">
+								<article>
+									<h6>Real World Learning</h6>
+									<p>Coderise provides an 8-week intensive training program based on team and project-driven learning to build products.</p>
+								</article>
+							</li>
+							<li class="threecol last">
+								<article>
+									<h6>Connect to opportunities</h6>
+									<p>Coderise will connect students with internship opportunities to continue learning, creating and collaborating.</p>
+								</article>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section id="sponsors" class="wrap container">
+					<div class="row">
+						<h3>Our Supporters</h3>
+						<div class="slogo">
+							<div class="threecol">
+								<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30"/></a>
+							</div>
+							<div class="threecol">
+								<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55"/></a>
+							</div>
+						</div>
+					</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="index-es.html">Versión en español</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
 					</div>
 				</div>
-				<div class="clearfix"></div>	
-				<section>
-					<h4>Coderise seeks to:</h4>
-					<div>
-						<article>
-							<h5>Teach to create</h5>
-
-							<p>Coderise focuses on the programming skills that are in high demand and that will provide students with the tools to go out there and start creating.</p>
-						</article>
-
-						<article>
-							<h5>Inspire by Example</h5>
-
-							<p>Coderise brings the most recognized tech entrepreneurs and programmers to share inspiring and technical know-how on their work.</p>
-						</article>
-
-						<article>
-							<h5>Real World Learning</h5>
-
-							<p>Coderise provides an 8-week intensive training program based on team and project-driven learning to build products.</p>
-						</article>
-
-						<article>
-							<h5>Connect to opportunities</h5>
-
-							<p>Coderise will connect students with internship opportunities to continue learning, creating and collaborating.</p>
-						</article>
-					</div>
-				</section>
-				<div class="clearfix"></div>
-				<section>
-					<h4>Our Supporters</h4>
-
-					<a href="http://socialatomgroup.com/"><img src="images/socialatom.png" width"200" height="30" class="slogo"/></a>
-
-					<a href="http://www.intergrupo.com/"><img src="images/intergrupo.png" width"214" height="55" class="slogo"/></a>
-				</section>
-				<div class="clearfix"></div>
-			</div>
+			</footer>
 		</div>
 		<script type="text/javascript" src="js/kickofflabs.js"> </script>
 	</body>
