--- a/mentores.html
+++ b/mentores.html
@@ -3,134 +3,133 @@
 	<head>
 		<title>Coderise :: Mentores</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="maximum-scale = 1.0, width=960">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+		<script src="js/default.js" type="text/javascript"></script>
 		<script src="js/googleAnalytics.js" type="text/javascript"></script>
-
-		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/default.css" type="text/css" rel="stylesheet" media="all"/>
-		<link href="css/media.css" type="text/css" rel="stylesheet" media="all"/>
+		
+		<link href="css/default2.css" type="text/css" rel="stylesheet" media="all"/>
+		<link href="css/1140.css" type="text/css" rel="stylesheet" media="all"/>
 		<link rel="icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
-		<header>
-			<div>
-				<a href="http://coderise.org"><h1>//coderise</h1></a>
-				<div class="social-widgets">
-					<a href="http://coderise.tumblr.com/" class="tb">
-					</a>
-
-					<a href="http://twitter.com/Code_rise" class="tw">
-					</a>
-
-					<a href="http://www.facebook.com/Coderise" class="fb">
-					</a>	
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</header>
-
-		<div id="content">
-			<div class="nav">
-				<div class="wrap">
-					<div class="btn-group" style="float: left;padding: 9px 0px;">
-  						<button class="btn btn-mini"><a href="mentors.html">English</a></button>
-  						<button class="btn btn-mini disabled">Español</button>
+		<div id="container">
+			<header role="banner" class="container">
+				<div class="row">
+					<div class="twelvecol">
+						<a class="logo" href="index-es.html">//coderise</a>
+						<a class="icon-list">menu</a>
+						<nav role="navigation">
+							<ul>
+								<li><a href="index-es.html">Inicio</a></li>
+								<li class="dropdown active">
+									<a>
+										Acerca
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="acerca.html">Sobre Coderise</a></li>
+										<li><a href="como.html">Como funciona</a></li>
+										<li class="active"><a href="mentores.html">Mentores</a></li>
+										<li><a href="equipo.html">Equipo</a></li>
+										<li><a href="estudiantes.html">Estudiantes</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#">
+										Prensa
+										<span class="icon-dropdown-arrow">&#9660;</span>
+									</a>
+									<ul>
+										<li><a href="prensa.html">Cubrimiento</a></li>
+										<li><a href="comunicados.html">Comunicados</a></li>
+									</ul>
+								</li>
+								<li><a href="apoya.html">Apoya</a></li>
+								<li class="last"><a href="aplica.html">Aplica</a></li>
+							</ul>
+						</nav>
 					</div>
-					<ul>
-						<li><a href="index-es.html">Inicio</a></li>
-						<li class="active"><a href="acerca.html">Sobre Coderise</a>
-							<ul>
-								<li><a href="como.html">Como funciona</a></li>
-								<li><a href="mentores.html">Mentores</a></li>
-								<li><a href="team.html">Equipo</a></li>
-								<li><a href="estudiantes.html">Estudiantes</a></li>
-							</ul>
-						</li>
-						<li><a href="contribute.html">Apoya</a></li>
-						<li><a href="aplica.html">Aplica</a></li>
-						<li><a href="#">Prensa</a>
-							<ul>
-								<li><a href="prensa.html">Cubrimiento</a></li>
-								<li><a href="comunicados.html">Comunicados</a></li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div id="head">
-				<section>
-					<div class="wrap">
-						<article>
-							<h2>Programa.Inspira.Crea.</h2>
-							<h3>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</h3>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-								<input type="submit" class="btn btn-pink" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>
-							</form>
-						</article>
+				</div>	
+			</header>
+			<section id="mentors" role="content">
+				<section class="wrap-mini wrap-gray container">
+					<div class="row">
+						<h2 class="twelvecol title">Mentores de Coderise</h2>
 					</div>
 				</section>
-			</div>
-
-			<div id="wrapper">
-				<article class="full-width">
-					<h5>Mentores de Coderise</h5>
-					<p>Cada Sábado, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.</p>
-							
-						<article class="team">		
-							<img src="images/Andres2.png" class="thumbs"/>
-							<div> 
-								<h6 class="colorGreen">Andrés Barreto</h6>
-								<p class="email"><a href="http://twitter.com/andresbarreto">@andresbarreto</a></p>
-							</div>
-							<p>Emprendedor Colombiano, y actual co-fundador de <a href="http://onswipe.com">Onswipe</a>, una plataforma de publicaciones y publicidad en tabletas, cuya sede principal se encuentra en la ciudad de New York. Andrés previamente fundó <a href="http://grooveshark.com">Grooveshark</a>,  <a href="http://socialatomgroup.com">Socialatom Group</a>, y <a href="http://pulsosocial.com">PulsoSocial</a>.</p>
-						</article>
-							
-						<article class="team">
-							<img src="images/Alex.png" class="thumbs" />
-							<div> 
-								<h6 class="colorGreen">Alex Torrenegra</h6>
-								<p class="email"><a href="http://twitter.com/torrenegra">@torrenegra</a></p>
-							</div>
-							 Fundador <a href="http://torrenegralabs.com">Torrenegra Labs</a>, incubadora de empresas tecnológicas basada en Bogotá, Colombia, y fundador de <a href="http://voicebunny.com">VoiceBunny</a>, <a href="http://bookingmarkets.com">BookingMarkets</a>, <a href="http://wehostels.com/">WeHostels</a>, <a href="http://hubbog.com/es">HubBOG</a>, entre otros.
-							</p>
-						</article>
-
-						<article class="team">
-							<img src="images/Daniel.png" class="thumbs"/>
-							<div> 
-								<h6 class="colorGreen">Daniel Loreto</h6>
-								<p class="email"><a href="http://twitter.com/DanielLoreto">@DanielLoreto</a></p>
-							</div>
-							 Emprendedor tecnológico, después de haber trabajado en Google pasó a fundar  la empresa de software Julpan, la cual más tarde fue comprada por Twitter. Daniel actualmente trabaja en el equipo de ingenieros de <a href="http://twitter.com">Twitter</a>.</p>
-						</article>
-
-						<article class="team">
-							<img src="images/Gisella.png" class="thumbs"/>
-							<div>
-								<h6 class="colorGreen">- Gisella Borja</h6>
-								<p class="email"><a href="http://twitter.com/gigiborja">@gigiborja</a></p>
-							</div>
-							<p>CTO de <a href="http://bookingmarkets.com/">Booking Markets</a>, plataforma enfocada en crear mercados de hosteleria.</p>
-						</article>
-
-						<article class="team">
-							<img src="images/juanpablo.jpg" class="thumbs"/>
-							<div>
-								<h6 class="colorGreen">Juan Pablo Buritica</h6>
-								<p class="email"><a href="http://twitter.com/buritica">@buritica</a></p>
-							</div>
-							 Colombian entrepreneur and software engineer, he is currently the VP of Engineering at Onswipe. He is also founder and director of Bogotaconf, a conference dedicated to the highest quality software engineering topics. Formerly, he cofounded and was the Lead Engineer at Panelfly, a mobile comics distribution app.
-							</p>
-						</article>
-				<div class="clearfix"></div>
-			</article>
-			</div>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="twelvecol">
+							<p>Cada Sábado, después de avanzar aprendizaje de materias de 8:00 AM a 11:00 AM, habrán charlas con distintos mentores de Coderise, exitosos profesionales en el mundo tecnológico.</p>
+						</div>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="fourcol center">
+							<article>
+								<img src="images/Andres2.png" class="thumbs"/>
+								<h6>Andrés Barreto</h6>
+								<p>Emprendedor Colombiano, y actual co-fundador de <a class="link" href="http://onswipe.com">Onswipe</a>, una plataforma de publicaciones y publicidad en tabletas, cuya sede principal se encuentra en la ciudad de New York. Andrés previamente fundó <a class="link" href="http://grooveshark.com">Grooveshark</a>, <a class="link" href="http://socialatomgroup.com">Socialatom Group</a>, <a class="link" href="http://pulsosocial.com">PulsoSocial</a>.</p>
+								<p><a class="link" href="http://twitter.com/andresbarreto">@andresbarreto</a></p>
+							</article>
+						</div>
+						<div class="fourcol center">
+							<article>
+								<img src="images/Alex.png" class="thumbs" />
+								<h6>Alex Torrenegra</h6>
+								<p>Fundador de <a class="link" href="http://torrenegralabs.com">Torrenegra Labs</a>, incubadora de empresas tecnológicas basada en Bogotá, Colombia, y fundador de <a class="link" href="http://voicebunny.com">VoiceBunny</a>, <a class="link" href="http://bookingmarkets.com">BookingMarkets</a>, <a class="link" href="http://wehostels.com/">WeHostels</a>, <a class="link" href="http://hubbog.com/es">HubBOG</a>, entre otros.</p>
+								<p><a class="link" href="http://twitter.com/torrenegra">@torrenegra</a></p>
+							</article>
+						</div>
+						<div class="fourcol last center">
+							<article>
+								<img src="images/Daniel.png" class="thumbs"/>
+								<h6>Daniel Loreto</h6>
+								<p>Emprendedor tecnológico, después de haber trabajado en Google pasó a fundar la empresa de software Julpan, la cual más tarde fue comprada por Twitter. Daniel actualmente trabaja en el equipo de ingenieros de <a class="link" href="http://twitter.com">Twitter</a>.</p>
+								<p><a class="link" href="http://twitter.com/DanielLoreto">@DanielLoreto</a></p>
+							</article>
+						</div>
+					</div>
+				</section>
+				<section class="wrap-mini container">
+					<div class="row">
+						<div class="fourcol center">
+							<article>
+								<img src="images/Gisella.png" class="thumbs"/>
+								<h6>Gisella Borja</h6>
+								<p>CTO de <a class="link" href="http://bookingmarkets.com/">Booking Markets</a>, plataforma enfocada en crear mercados de hosteleria.</p>
+								<p><a class="link" href="http://twitter.com/gigiborja">@gigiborja</a></p>
+							</article>
+						</div>
+						<div class="fourcol center">
+							<article>
+								<img src="images/juanpablo.jpg" class="thumbs"/>
+								<h6>Juan Pablo Buritica</h6>
+								<p>Emprendedor colombiano e Ingeniero de Software, Juan Pablo es actualmente VP de Ingeniería en Onswipe. También es fundador y director de BogotaConf, una conferencia dedicada a temás de ingeniería de software de la más alta calidad. Anteriormente, fué co-fundador e Ingeniero Líder de Panelfly, una aplicación móvil de distribución de comics.
+								</p>
+								<p><a class="link" href="http://twitter.com/buritica">@buritica</a></p>
+							</article>
+						</div>
+					</div>
+				</section>
+			</section>
+			<footer class="wrap-mini wrap-navy">
+				<div class="row">
+					<span class="globe left"></span>
+					<a class="left localization" href="mentors.html">English version</a>
+					<div class="social-widgets">
+						<a href="http://coderise.tumblr.com/" class="tb">
+						</a>
+						<a href="http://twitter.com/Code_rise" class="tw">
+						</a>
+						<a href="http://www.facebook.com/Coderise" class="fb">
+						</a>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
