--- a/apoya.html
+++ b/apoya.html
@@ -87,8 +87,8 @@
 						    		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 										<input type="hidden" name="cmd" value="_s-xclick">
 										<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-
-										<input type="submit" class="btn" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+										<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Apoya ya!</a>
+										<!--<input type="submit" class="btn" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>-->
 									</form>
 						    	</li>
 
