--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
+								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Support now!</a>
 
-								<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>
+								<!--<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>-->
 							</form>
 						</article>
 					</div>
@@ -82,7 +83,7 @@
 					    </div>
 						<form id="signup_form" class="sixcol last">
 							<input id="email" class="email-input" type="email" placeholder="Enter Your Email" name="email" size="64">
-							<input id="submit_email" class="submit-button btn btn-pink" type="submit" value="Join">
+							<a href="javascript:void(0)" id="submit_email" class="submit-button btn">Join</a>
 						</form>
 					</div>
 				</section>
