Style for students

--- a/how.html
+++ b/how.html
@@ -112,7 +112,7 @@
 							<h4>Mentors of Coderise</h4>
 						</div>
 						<div class="ninecol last">
-							<p>Each Saturday, there will be fireside chats with various Coderise mentors, successful professionals from the tech world.  These will share their experiences, their trajectory throughout various initiatives, and will be able to talk one-on-one with Coderise students.  <a href="mentors.html">[Read a bit more on mentors here.]</a></p>
+							<p>Each Saturday, there will be fireside chats with various Coderise mentors, successful professionals from the tech world.  These will share their experiences, their trajectory throughout various initiatives, and will be able to talk one-on-one with Coderise students.  <a  class="link" href="mentors.html">[Read a bit more on mentors here.]</a></p>
 						</div>
 					</div>
 				</section>
