--- a/students.html
+++ b/students.html
@@ -63,33 +63,39 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="http://about.me/juanpablinca1" title="Juan Pablo Hincapie Alvarez" target="_blank">
-									<img src="images/juanph.png" alt="">
-								</a>
+								<div class="header">
+									<a href="http://about.me/juanpablinca1" title="Juan Pablo Hincapie A." target="_blank">
+										<img class="thumbs" src="images/juanph.png" alt="">
+									</a>
+								</div>
+								<h6>Juan Pablo Hincapie A.</h6>
 								<a href="https://c9.io/juanpablinca1/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Juan Pablo Hincapie Alvarez</h6>
-									<span class="categories">Find my ecopark</span>
+									<span class="categories">Project: Find my ecopark</span>
 								</a>
 							</article><!-- end article (Juan Pablo Hincapie Alvarez) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/manaranjoc" title="Miguel Angel Naranjo Cano" target="_blank">
-									<img src="images/migueln.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/manaranjoc" title="Miguel Angel Naranjo C." target="_blank">
+										<img class="thumbs" src="images/migueln.png" alt="">
+									</a>
+								</div>
+								<h6>Miguel Angel Naranjo C.</h6>
 								<a href="#" class="project-meta" target="_blank">
-									<h6>Miguel Angel Naranjo Cano</h6>
 									<span class="categories">CalControl</span>
 								</a>						
 							</article><!-- end .article (Miguel Angel Naranjo Cano) -->
 						</div>
 						<div class="fourcol last center">
 							<article>
-								<a href="https://twitter.com/LiaVillegasA" title="Natalia Villegas" target="_blank">
-									<img src="images/nataliav.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/LiaVillegasA" title="Natalia Villegas A." target="_blank">
+										<img class="thumbs" src="images/nataliav.png" alt="">
+									</a>
+								</div>
+								<h6>Natalia Villegas A.</h6>
 								<a href="https://c9.io/liavillegas/lifemission/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Natalia Villegas</h6>
 									<span class="categories">LifeMission</span>
 								</a>						
 							</article><!-- end article (Natalia Villegas) -->
@@ -98,33 +104,39 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="http://about.me/JosueDanielBust" title="Josue Bustamante"target="_blank">
-									<img src="images/josueb.png" alt="">
-								</a>
+								<div class="header">
+									<a href="http://about.me/JosueDanielBust" title="Josue Bustamante"target="_blank">
+										<img class="thumbs" src="images/josueb.png" alt="">
+									</a>
+								</div>
+								<h6>Josue Bustamante</h6>
 								<a href="http://shac.herokuapp.com/" class="project-meta" target="_blank">
-									<h6>Josue Bustamante</h6>
 									<span class="categories">Sistema de Horarios y Actividades para Colegios</span>
 								</a>
 							</article><!-- end article (Josue Bustamante) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/CEGALVAREZ" title="Carlos Alvarez" target="_blank">
-									<img src="images/carlosa.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/CEGALVAREZ" title="Carlos Alvarez" target="_blank">
+										<img class="thumbs" src="images/carlosa.png" alt="">
+									</a>
+								</div>
+								<h6>Carlos Alvarez</h6>
 								<a href="https://c9.io/carlos-alvarez/sow2/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Carlos Alvarez</h6>
 									<span class="categories">Exim (Exports and Imports)</span>
 								</a>						
 							</article><!-- end article (Carlos Alvarez) -->
 						</div>
 						<div class="fourcol last center">
 							<article>
-								<a href="http://about.me/jdavidavendano" title="Jonathan David Avendano Ortega" target="_blank">
-									<img src="images/jonathana.png" alt="">
-								</a>
+								<div class="header">
+									<a href="http://about.me/jdavidavendano" title="Jonathan David Avendano O." target="_blank">
+										<img class="thumbs" src="images/jonathana.png" alt="">
+									</a>
+								</div>
+								<h6>Jonathan David Avendano O.</h6>
 								<a href="https://c9.io/jonathandao/emucel/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Jonathan David Avendano O.</h6>
 									<span class="categories">Emucel</span>
 								</a>						
 							</article><!-- end article (Jonathan David Avendano Ortega) -->
@@ -133,33 +145,39 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/luisfarcos" title="Luis Felipe Arcos" target="_blank">
-									<img src="images/luisfa.png" alt="">
-								</a>
-								<a href="#" class="project-meta" target="_blank">
-									<h6>Luis Felipe Arcos</h6>
+								<div class="header">
+									<a href="https://twitter.com/luisfarcos" title="Luis Felipe Arcos" target="_blank">
+										<img class="thumbs" src="images/luisfa.png" alt="">
+									</a>
+								</div>
+								<h6>Luis Felipe Arcos</h6>
+								<a href="#" class="project-meta" target="_blank">									
 									<span class="categories">KnowYourTunes</span>
 								</a>						
 							</article><!-- end article (Luis Felipe Arcos) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="https://www.facebook.com/manut95" title="Manuela Tamayo Villa" target="_blank">
-									<img src="images/manuelat.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://www.facebook.com/manut95" title="Manuela Tamayo V." target="_blank">
+										<img class="thumbs" src="images/manuelat.png" alt="">
+									</a>
+								</div>
+								<h6>Manuela Tamayo V.</h6>
 								<a href="https://c9.io/manuelatamayov/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Manuela Tamayo Villa</h6>
 									<span class="categories">Ideas Fierro</span>
 								</a>						
 							</article><!-- end article (Manuela Tamayo Villa) -->
 						</div>
 						<div class="fourcol last center">
 							<article>
-								<a href="https://twitter.com/Sebas_Twin" title="Sebastian Bedoya Cortes" target="_blank">
-									<img src="images/sebastianb.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/Sebas_Twin" title="Sebastian Bedoya C." target="_blank">
+										<img class="thumbs" src="images/sebastianb.png" alt="">
+									</a>
+								</div>
+								<h6>Sebastian Bedoya C.</h6>
 								<a href="https://c9.io/imellosebas/dossg2/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Sebastian Bedoya Cortes</h6>
 									<span class="categories">Dogs Adoptame</span>
 								</a>						
 							</article><!-- end article (Sebastian Bedoya Cortes) -->
@@ -168,33 +186,39 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/mateo_olarte" title="Mateo Olarte" target="_blank">
-									<img src="images/mateoo.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/mateo_olarte" title="Mateo Olarte" target="_blank">
+										<img class="thumbs" src="images/mateoo.png" alt="">
+									</a>
+								</div>
+								<h6>Mateo Olarte</h6>
 								<a href="https://c9.io/mateolarte/ecoactuar/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Mateo Olarte</h6>
 									<span class="categories">Ecoactuar</span>
 								</a>						
 							</article><!-- end article (Mateo Olarte) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="#" title="Nilo Daniel Mieles Tabares">
-									<img src="images/nilom.png" alt="">
-								</a>
+								<div class="header">
+									<a href="#" title="Nilo Daniel Mieles Tabares">
+										<img class="thumbs" src="images/nilom.png" alt="">
+									</a>
+								</div>
+								<h6>Nilo Daniel Mieles T.</h6>
 								<a href="#" class="project-meta" target="_blank">
-									<h6>Nilo Daniel Mieles Tabares</h6>
 									<span class="categories">Contra The Nes Collection</span>
 								</a>						
 							</article><!-- end article (Nilo Daniel Mieles Tabares) -->
 						</div>
 						<div class="fourcol last center">
 							<article>
-								<a href="https://www.facebook.com/alejo.echavarria.31" title="Rodrigo Alejandro Echavarria Echeverri" target="_blank">
-									<img src="images/rodrigoe.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://www.facebook.com/alejo.echavarria.31" title="Rodrigo Alejandro Echavarria E." target="_blank">
+										<img class="thumbs" src="images/rodrigoe.png" alt="">
+									</a>
+								</div>
+								<h6>Rodrigo Alejandro Echavarria E.</h6>
 								<a href="https://c9.io/ghahia/feelseries/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Rodrigo Alejandro Echavarria E.</h6>
 									<span class="categories">Feel Series</span>
 								</a>						
 							</article><!-- end .one-third (Rodrigo Alejandro Echavarria Echeverri) -->
@@ -203,33 +227,39 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/teoflorez97" title="Mateo Florez Bedoya" target="_blank">
-									<img src="images/mateof.png" alt="">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/teoflorez97" title="Mateo Florez B." target="_blank">
+										<img class="thumbs" src="images/mateof.png" alt="">
+									</a>
+								</div>
+								<h6>Mateo Florez B.</h6>
 								<a href="https://c9.io/matthew1913/animalia/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Mateo Florez Bedoya</h6>
 									<span class="categories">Animalia</span>
 								</a>
 							</article><!-- end article (Mateo Florez Bedoya) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="http://about.me/davidvelasquezm.6" title="David Velasquez" target="_blank">
-									<img src="images/davidv.png" alt="">
-								</a>
+								<div class="header">
+									<a href="http://about.me/davidvelasquezm.6" title="David Velasquez" target="_blank">
+										<img class="thumbs" src="images/davidv.png" alt="">
+									</a>
+								</div>
+								<h6>David Velasquez</h6>
 								<a href="https://c9.io/davidvelasquezm/brainshare/workspace/index.html" class="project-meta" target="_blank">
-									<h6>David Velasquez</h6>
 									<span class="categories">BrainShare</span>
 								</a>
 							</article><!-- end article (David Velasquez) -->
 						</div>
 						<div class="fourcol last center">
 							<article>
-								<a href="#" title="Luisa Perez">
-									<img src="images/luisap.png" alt="">
-								</a>
+								<div class="header">
+									<a href="#" title="Luisa Perez">
+										<img class="thumbs" src="images/luisap.png" alt="">
+									</a>
+								</div>
+								<h6>Luisa Perez</h6>
 								<a href="https://c9.io/luleperez/infieles/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Luisa Perez</h6>
 									<span class="categories">HiddenLife</span>
 								</a>
 							</article><!-- end article (Luisa Perez) -->
@@ -238,22 +268,26 @@
 					<div class="row">
 						<div class="fourcol center">
 							<article>
-								<a href="http://twitter.com/anamariasosam" title="Ana María Sosa Martinez" target="_blank">
-									<img src="images/anams.png" alt="">
-								</a>
+								<div class="header">
+									<a href="http://twitter.com/anamariasosam" title="Ana María Sosa Martinez" target="_blank">
+										<img class="thumbs" src="images/anams.png" alt="">
+									</a>
+								</div>
+								<h6>Ana María Sosa M.</h6>
 								<a href="https://c9.io/anasosa9/bootstrap-starter-coderise/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Ana María Sosa Martinez</h6>
 									<span class="categories">IPA(Informacion de Procesos Academicos)</span>
 								</a>
 							</article><!-- end .article (Ana María Sosa Martinez) -->
 						</div>
 						<div class="fourcol center">
 							<article>
-								<a href="https://twitter.com/johan_yepesrios" title="Johan Sebastian Yepes" target="_blank">
-									<img src="images/johany.png" alt="" target="_blank">
-								</a>
+								<div class="header">
+									<a href="https://twitter.com/johan_yepesrios" title="Johan Sebastian Yepes" target="_blank">
+										<img class="thumbs" src="images/johany.png" alt="" target="_blank">
+									</a>
+								</div>
+								<h6>Johan Sebastian Yepes</h6>
 								<a href="https://c9.io/super122009/travelators/workspace/index.html" class="project-meta" target="_blank">
-									<h6>Johan Sebastian Yepes</h6>
 									<span class="categories">Travelators</span>
 								</a>
 							</article><!-- end article (Johan Sebastian Yepes) -->
