--- a/about.html
+++ b/about.html
@@ -64,11 +64,8 @@
 						<div class="threecol">
 							<h4>Mission</h4>
 						</div>
-						<div class="fivecol">
+						<div class="ninecol last">
 							<p style="text-align: justify;">Our mission is to empower high-school students with demonstrated potential by giving them the tools and inspiration to dive into tech innovation and tap into their entrepreneurial spirit.</p>
-						</div>
-						<div class="fourcol last">
-							<img src="images/kids_and_instructor.png" class="mini-thumb left">
 						</div>
 					</div>
 				</section>
@@ -77,17 +74,24 @@
 						<div class="threecol">
 							<h4>Objectives</h4>
 						</div>
-						<ul class="ninecol last">
-							<li>
-								<p><span class="dropcap">G</span>raduate 15 students from the Coderise pilot program</p>
-							</li>
-							<li>
-								<p><span class="dropcap">L</span>aunch the first Coderise Hackathon at the end of the program</p>
-							</li>
-							<li>
-								<p><span class="dropcap">A</span>chieve a basic level of Javascript for 70 percent of students</p>
-							</li>
-						</ul>
+						<div class="threecol">
+							<article>
+								<img src="images/kids_and_instructor.png" class="mini-thumb">
+								<p>Graduate 15 students from the Coderise pilot program</p>
+							</article>
+						</div>
+						<div class="threecol">
+							<article>
+								<img src="images/kids_and_computer.png" class="mini-thumb">
+								<p>Launch the first Coderise Hackathon at the end of the program</p>
+							</article>
+						</div>
+						<div class="threecol last">
+							<article>
+								<img src="images/kids_and_js.png" class="mini-thumb">
+								<p>Achieve a basic level of Javascript for 70 percent of students</p>
+							</article>
+						</div>
 					</div>
 				</section>
 				<section class="wrap-mini container">
