--- a/acerca.html
+++ b/acerca.html
@@ -64,30 +64,34 @@
 						<div class="threecol">
 							<h4>Misi&oacute;n</h4>
 						</div>
-						<div class="fivecol">
+						<div class="ninecol last">
 							<p style="text-align: justify;">Nuestra misi&oacute;n es empoderar a j&oacute;venes de bajos recursos y gran potencial d&aacute;ndoles las herramientas e inspiraci&oacute;n para que puedan ser inovadores de tecnolog&iacute;a y futuros emprendedores digitales.</p>
-						</div>
-						<div class="fourcol last">
-							<img src="images/kids_and_instructor.png" class="mini-thumb left">
 						</div>
 					</div>
 				</section>
 				<section id="objectives" class="wrap-mini wrap-gray container">
 					<div class="row">
 						<div class="threecol">
-							<h4>Objectivos</h4>
+							<h4>Objetivos</h4>
 						</div>
-						<ul class="ninecol last">
-							<li>
-								<p><span class="dropcap">G</span>raduar 15 estudiantes del programa piloto de Coderise</p>
-							</li>
-							<li>
-								<p><span class="dropcap">L</span>anzar la primera Hackathon al final del programa</p>
-							</li>
-							<li>
-								<p><span class="dropcap">P</span>osibilitar que el 70 por ciento de los estudiantes alcance un nivel b&aacute;sico de Javascript</p>
-							</li>
-						</ul>
+						<div class="threecol">
+							<article>
+								<img src="images/kids_and_instructor.png" class="mini-thumb">
+								<p>Graduate 15 students from the Coderise pilot program</p>
+							</article>
+						</div>
+						<div class="threecol">
+							<article>
+								<img src="images/kids_and_computer.png" class="mini-thumb">
+								<p>Launch the first Coderise Hackathon at the end of the program</p>
+							</article>
+						</div>
+						<div class="threecol last">
+							<article>
+								<img src="images/kids_and_js.png" class="mini-thumb">
+								<p>Achieve a basic level of Javascript for 70 percent of students</p>
+							</article>
+						</div>
 					</div>
 				</section>
 				<section class="wrap-mini container">
