--- a/index-es.html
+++ b/index-es.html
@@ -79,7 +79,8 @@
 				<section id="email-banner" class="wrap wrap-gray container">
 					<div class="row">
 						<div class="sixcol">
-					        <h5>Inf&oacute;rmate sobre la Comunidad Coderise!</h5>
+					        <h2>Inf&oacute;rmate!</h2>
+					        <p>Recibe noticias sobre la Comunidad Coderise.</p>
 					    </div>
 						<form id="signup_form" class="sixcol last">
 							<input id="email" class="email-input" type="email" placeholder="Ingresa tu email" name="email" size="64">
@@ -95,8 +96,8 @@
 					        <p>Coderise es un programa libre de costo para los estudiantes.  Transporte semanal y refrigerios estar&aacute;n cubiertos.</p>
 					    </div>
 					    <div class="sixcol last center">
-					    	<h6>Conoce la Clase Coderise 2012</h6>
-					    	<div class="video">
+					    	<h4>Conoce la Clase Coderise 2012</h4>
+					    	<div class="video" style="padding: 0;">
 								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
