--- a/prensa.html
+++ b/prensa.html
@@ -58,7 +58,7 @@
 				<section class="wrap-mini wrap-gray container">
 					<div class="row">
 						<div class="twelvecol">
-							<h2 class="title left">Cubrimiento en prensa</h2>
+							<h2 class="title left">Cubrimiento</h2>
 							<ul id="tabs" class="right">
 								<li><a href="javascript:tabSwitch(1, 3, 'tab_', 'content_');" class="tab-active" id="tab_1"> 1 </a></li>
 								<li><a href="javascript:tabSwitch(2, 3, 'tab_', 'content_');" class="tab" id="tab_2"> 2</a></li>
