--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
-								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Support now!</a>
+								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Support now &#9658;</a>
 
 								<!--<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>-->
 							</form>
@@ -79,7 +79,8 @@
 				<section id="email-banner" class="wrap wrap-gray container">
 					<div class="row">
 						<div class="sixcol">
-					        <h5>Keep up with the Coderise Community!</h5>
+					        <h2>Keep up with us!</h2>
+					        <p>Get updates about the Coderise Community</p>
 					    </div>
 						<form id="signup_form" class="sixcol last">
 							<input id="email" class="email-input" type="email" placeholder="Enter Your Email" name="email" size="64">
@@ -95,16 +96,16 @@
 					        <p>Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.</p>
 					    </div>
 					    <div class="sixcol last center">
-					    	<h6>Meet Coderise Class of 2012</h6>
-					    	<div class="video">
-								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+					    	<h4>Meet Coderise Class of 2012</h4>
+					    	<div class="video" style="padding: 0;">
+								<iframe width="100%" height="100%" src="http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=2&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
 				</section>
 				<section id="keypoints" class="wrap wrap-gray container">
 					<div class="row">
-						<h3>Coderise seeks to:</h3>
+						<h2>Coderise seeks to:</h2>
 						<ul>
 							<li class="threecol">
 								<article>
