--- a/acerca.html
+++ b/acerca.html
@@ -77,19 +77,19 @@
 						<div class="threecol">
 							<article>
 								<img src="images/kids_and_instructor.png" class="mini-thumb">
-								<p>Graduate 15 students from the Coderise pilot program</p>
+								<p>Graduar 15 estudiantes del programa piloto de Coderise.</p>
 							</article>
 						</div>
 						<div class="threecol">
 							<article>
 								<img src="images/kids_and_computer.png" class="mini-thumb">
-								<p>Launch the first Coderise Hackathon at the end of the program</p>
+								<p>Lanzar la primera Hackathon al final del programa.</p>
 							</article>
 						</div>
 						<div class="threecol last">
 							<article>
 								<img src="images/kids_and_js.png" class="mini-thumb">
-								<p>Achieve a basic level of Javascript for 70 percent of students</p>
+								<p>Lograr que el 70 por ciento de los estudiantes alcance un nivel básico de Javascript</p>
 							</article>
 						</div>
 					</div>
