--- a/acerca.html
+++ b/acerca.html
@@ -89,7 +89,7 @@
 						<div class="threecol last">
 							<article>
 								<img src="images/kids_and_js.png" class="mini-thumb">
-								<p>Lograr que el 70 por ciento de los estudiantes alcance un nivel básico de Javascript</p>
+								<p>Lograr que el 70% de los estudiantes alcance un nivel básico de Javascript</p>
 							</article>
 						</div>
 					</div>
