--- a/mentors.html
+++ b/mentors.html
@@ -118,8 +118,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<span class="globe left"></span>
-					<a class="left localization" href="mentores.html">Versión en español</a>
+					<a class="twocol localization" href="mentores.html">Coderise en ESPA&Ntilde;OL</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
