--- a/aplica.html
+++ b/aplica.html
@@ -122,7 +122,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="apply.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="apply.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
