--- a/releases.html
+++ b/releases.html
@@ -113,7 +113,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="comunicados.html">Coderise en ESPA&Ntilde;OL</a>
+					<a class="left localization" href="comunicados.html">Coderise en ESPA&Ntilde;OL</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
