--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="acerca.html">Coderise en ESPA&Ntilde;OL</a>
+					<a class="left localization" href="acerca.html">Coderise en ESPA&Ntilde;OL</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
