--- a/apoya.html
+++ b/apoya.html
@@ -127,7 +127,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="contribute.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="contribute.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
