--- a/como.html
+++ b/como.html
@@ -130,7 +130,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="how.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="how.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
