--- a/comunicados.html
+++ b/comunicados.html
@@ -157,7 +157,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="releases.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="releases.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
