--- a/equipo.html
+++ b/equipo.html
@@ -144,7 +144,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="team.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="team.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
