--- a/estudiantes.html
+++ b/estudiantes.html
@@ -297,7 +297,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="students.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="students.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
