--- a/how.html
+++ b/how.html
@@ -129,7 +129,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="como.html">Coderise en ESPA&Ntilde;OL</a>
+					<a class="left localization" href="como.html">Coderise en ESPA&Ntilde;OL</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
