--- a/index-es.html
+++ b/index-es.html
@@ -150,7 +150,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="index.html">Coderise in ENGLISH</a>
+					<a class="left localization" href="index.html">Coderise in ENGLISH</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
