--- a/press.html
+++ b/press.html
@@ -188,7 +188,7 @@
 			</section>
 			<footer class="wrap-mini wrap-navy">
 				<div class="row">
-					<a class="twocol localization" href="prensa.html">Coderise en ESPA&Ntilde;OL</a>
+					<a class="left localization" href="prensa.html">Coderise en ESPA&Ntilde;OL</a>
 					<div class="social-widgets">
 						<a href="http://coderise.tumblr.com/" class="tb">
 						</a>
