Link to herokuapp

--- a/aplica.html
+++ b/aplica.html
@@ -42,7 +42,7 @@
 									</a>
 									<ul>
 										<li><a href="prensa.html">Cubrimiento</a></li>
-										<li><a href="comunicados.html">Comunicados</a></li>
+										<li><a href="https://support.coderise.org">Comunicados</a></li>
 									</ul>
 								</li>
 								<li><a href="apoya.html">Apoya</a></li>
