--- a/releases.html
+++ b/releases.html
@@ -46,7 +46,7 @@
 										<li class="active"><a href="releases.html">Press Releases</a></li>
 									</ul>
 								</li>
-								<li><a href="contribute.html">Support</a></li>
+								<li><a href="https://support.coderise.org">Support</a></li>
 								<li class="last"><a href="apply.html">Apply</a></li>
 							</ul>
 						</nav>
