--- a/prensa.html
+++ b/prensa.html
@@ -46,7 +46,7 @@
 										<li><a href="comunicados.html">Comunicados</a></li>
 									</ul>
 								</li>
-								<li><a href="apoya.html">Apoya</a></li>
+								<li><a href="https://support.coderise.org">Apoya</a></li>
 								<li class="last"><a href="aplica.html">Aplica</a></li>
 							</ul>
 						</nav>
