--- a/index-es.html
+++ b/index-es.html
@@ -63,12 +63,13 @@
 						<article>
 							<h1>Programa.Inspira.Crea.</h1>
 							<p>Coderise empodera a los estudiantes jóvenes en naciones en desarrollo, enseñándoles a crear aplicaciones web.</p>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+							<a href="https://support.coderise.org" class="btn btn-outline" alt="support.coderise.org">Apoya ya &#9658;</a>
+							<!--<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Apoya ya &#9658;</a>
 
-								<!--<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>-->
+								<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Apoya ya!"/>-->
 							</form>
 						</article>
 					</div>
