--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
 						<article>
 							<h1>Code.Inspire.Create</h1>
 							<p>Coderise empowers young students in developing nations by teaching them how to build great web applications.</p>
-							<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
+							<a href="https://support.coderise.org" class="btn btn-outline" alt="support.coderise.org">Support now &#9658;</a>
+							<!--<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="paypal-form">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="87USZS9R4YV3C">
 								<a href="javascript:void(0)" onclick="submit();" class="btn btn-outline" name="submit" alt="PayPal - The safer, easier way to pay online!">Support now &#9658;</a>
 
-								<!--<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>-->
+								<input type="submit" class="btn btn-outline" href="http://www.indiegogo.com/coderise" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Support Now!"/>-->
 							</form>
 						</article>
 					</div>
