--- a/aplica.html
+++ b/aplica.html
@@ -68,7 +68,7 @@
 							<br>
 							<p>Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín y Bogotá.</p>
 							<br>
-							<h6>Inscripciones comienzan el 20 de Abril!</h6>
+							<h6>Inscripciones comienzan muy pronto!</h6>
 							<!--
 							<p class="colorGreen">¡Inscríbase ya!</p>
 
