--- a/apply.html
+++ b/apply.html
@@ -68,7 +68,7 @@
 							<br>
 							<p>Students in the last three years of high school and living in the metropolitan area of Medellin and Bogota, Colombia, are elegible to apply for Coderise 2013.</p>
 							<br>
-							<h6>Applications will be open April 20!</h6>
+							<h6>Applications will be open soon!</h6>
 							<!--
 							<p class="colorGreen">¡Inscríbase ya!</p>
 
